# platform.core.multimedia.libmm-fileinfo

./: AUTHORS  Makefile.am  README  config.h.in  configure  configure.ac  mm-fileinfo.pc.in  mm_file.c
TC/: tet_scen
TC/utc/: Makefile  tslist  utc_mm_file_create_content_attrs_from_memory_func.c  utc_mm_file_create_content_attrs_func.c  utc_mm_file_create_content_attrs_simple_func.c  utc_mm_file_create_tag_attrs_from_memory_func.c  utc_mm_file_create_tag_attrs_func.c  utc_mm_file_destroy_content_attrs_func.c  utc_mm_file_destroy_tag_attrs_func.c  utc_mm_file_get_attrs_func.c  utc_mm_file_get_stream_info_func.c  utc_mm_fileinfo_common.h
codecs/: Makefile.am
codecs/ffmpeg/: Makefile.am  mm_file_codec_dummy.c  mm_file_codecs.c
codecs/ffmpeg/include/: mm_file_codec_dummy.h  mm_file_codec_private.h
debian/: changelog  control  copyright  libmm-fileinfo-dev.install.in  rules
formats/: Makefile.am
formats/ffmpeg/: Makefile.am  mm_file_format_aac.c  mm_file_format_amr.c  mm_file_format_dummy.c  mm_file_format_ffmpeg.c  mm_file_format_ffmpeg_drm.c  mm_file_format_ffmpeg_mem.c  mm_file_format_frame.c  mm_file_format_imelody.c  mm_file_format_midi.c  mm_file_format_mmf.c  mm_file_format_mp3.c  mm_file_format_tag_id3.c  mm_file_format_tags.c  mm_file_format_wav.c  mm_file_formats.c
formats/ffmpeg/include/: mm_file_format_aac.h  mm_file_format_amr.h  mm_file_format_audio.h  mm_file_format_dummy.h  mm_file_format_ffmpeg.h  mm_file_format_ffmpeg_drm.h  mm_file_format_ffmpeg_mem.h  mm_file_format_id3tag.h  mm_file_format_imelody.h  mm_file_format_midi.h  mm_file_format_mmf.h  mm_file_format_mp3.h  mm_file_format_private.h  mm_file_format_tag_id3.h  mm_file_format_tags.h  mm_file_format_wav.h
include/: mm_file.h  mm_file_codecs.h  mm_file_debug.h  mm_file_error.h  mm_file_format_frame.h  mm_file_formats.h
packaging/: libmm-fileinfo.changes  libmm-fileinfo.spec
tests/: Makefile.am  mm_file_memtrace_reader.c  mm_file_test.c  mm_file_traverse.h  mm_file_traverser.c
utils/: Makefile.am  mm_file_util_io.c  mm_file_util_io_drm.c  mm_file_util_io_file.c  mm_file_util_io_mem.c  mm_file_util_io_mmap.c  mm_file_util_list.c  mm_file_util_locale.c  mm_file_util_memory.c  mm_file_util_mime.c  mm_file_util_print.c  mm_file_util_string.c  mm_file_util_tag.c  mm_file_util_validity.c
utils/include/: mm_file_utils.h
